refactor: Improve swagger annotations and fix the resetpassword endpoint issue
